Edited the frontend javascript and css files

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -39,7 +39,7 @@ nav .links a:hover {
 
 /* index.ejs */
 
-.sign-up-block {
+#sign-up-block {
     display: none;
     width: 50%;
     margin: 0 auto;
