--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    
 </head>
 <body>
 
     <script src="/javascript/main.js"></script>
     
-    <nav>
+    <nav onload="initializeNodes()">
         <div class="content">
             <h1><a href="/">Datum</a></h1>
             <div class="links">
                 <a href="/about">About</a>
                 <a href="/contact-us">Contact Us</a>
-                <a href="/login">Login</a>
+                <% if (locals.user) { %>
+                    <form action="/user/logout" method="POST">
+                        <input type="submit" value="Logout">
+                    </form>
+                <% } else { %>
+                    <a href="/login">Login</a>
+                <% } %> 
             </div>
         </div>
     </nav>
