--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,9 +16,7 @@
                 <a href="/about">About</a>
                 <a href="/contact-us">Contact Us</a>
                 <% if (locals.user) { %>
-                    <form action="/user/logout" method="POST">
-                        <input type="submit" value="Logout">
-                    </form>
+                    <a href="/user/logout">Logout</a>
                 <% } else { %>
                     <a href="/login">Login</a>
                 <% } %> 
