--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,7 +15,7 @@
             <div class="links">
                 <a href="/about">About</a>
                 <a href="/contact-us">Contact Us</a>
-                <% if (locals.user) { %>
+                <% if (locals.userAuth) { %>
                     <a href="/user/logout">Logout</a>
                 <% } else { %>
                     <a href="/login">Login</a>
