--- a/src/views/main/contactUs.ejs
+++ b/src/views/main/contactUs.ejs
@@ -1,8 +1,33 @@
 <%- include('../partials/header.ejs') %>
 
     <div class="contact-us-page">
+        <h1>Reach out to us!</h1>
         <div class="content">
-            <h1>Contact Us</h1>
+            <div class="left-block content-block">
+                <form action="/main/send-mail">
+
+                    <div>
+                        <label for="name">Name</label><br>
+                        <input type="text" name="name" required>
+                    </div>
+                    <div>
+                        <label for="email">Email</label><br>
+                        <input type="email" name="email" required>
+                    </div>
+                    <div>
+                        <label for="question">How can we help?</label><br>
+                        <input type="text" name="question" placeholder="e.g How do I create a form?" required>
+                    </div>
+                    <div class="contact-text-area">
+                        <label for="desc"></label>
+                        <textarea name="desc" cols="30" rows="10"></textarea>
+                    </div>
+    
+                </form>
+            </div>
+            <div class="right-block content-block">
+                <img src="/images/contact-us-img.png" alt="contact-us-img">
+            </div>
         </div>
     </div>
 
