--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,13 +13,20 @@
         <div class="content">
             <h1><a href="/">Datum</a></h1>
             <div class="links">
+
+                <% if (locals.loggedIn) { %>
+                    <a href="/form/create">New Form</a>
+                <% } %>
+
                 <a href="/about">About</a>
                 <a href="/contact-us">Contact Us</a>
-                <% if (locals.userAuth) { %>
+
+                <% if (locals.loggedIn) { %>
                     <a href="/user/logout">Logout</a>
                 <% } else { %>
                     <a href="/login">Login</a>
                 <% } %> 
+
             </div>
         </div>
     </nav>
