Fixed the pop up functionality and started working on the user home page UI

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,13 +18,13 @@
             
                 <img src="/images/img1.jpg" alt="img1">
                 <!-- <a href="/user/sign-up" id="landing-sign-up-link"><div class="sign-up-link">Sign up today!</div></a> -->
-                <div class="sign-up-link" id="landing-sign-up-link" onclick="showSignUp()">Sign up today!</div>
+                <div class="sign-up-link" id="landing-sign-up-link" onclick="showPopUp()">Sign up today!</div>
                 
             </div>
         </div>
 
 
-        <div class="sign-up-block" id="sign-up-block" onclick="showSignUp(event)">
+        <div class="popup sign-up-block" id="sign-up-block" onclick="showPopUp(event)">
 
             <div class="landing-sign-up">
                 <h1>Sign up with Email</h1>
