--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,4 @@
-html {
+html, body {
     height: 100%;
 }
 body {
@@ -10,7 +10,9 @@ body {
 a {
     text-decoration: none;
 }
-
+.popup {
+    display: none;
+}
 
 /* header.ejs */
 nav {
@@ -48,7 +50,6 @@ nav .links a:hover {
     z-index: 10;
     width: 100%;
     height: 90vh;
-    display: none;
 }
 .sign-up-block .landing-sign-up {
     background-color: white;
@@ -233,3 +234,66 @@ nav .links a:hover {
     background-color: rgb(216, 229, 255);
 }
 
+
+
+/* home.ejs */
+
+.user-home-page {
+    display: flex;
+    justify-content: center;
+}
+.user-home-page .user-nav {
+    background-color: rgb(193, 232, 255);
+    border-radius: .7em;
+    padding: 1em;
+    width: 60em;
+    margin: .4em auto;
+}
+.user-home-page .grid-block {
+    border: 1px solid black;
+    width: 62em;
+    margin: 0 auto;
+    display: flex;
+}
+.user-home-page .recent-bar {
+    width: 8em;
+    min-height: 10em;
+    background-color: rgb(45, 45, 110);
+    margin: 0 .2em;
+    border-radius: .7em;
+    color: white;
+    padding-top: 1em;
+    text-align: center;
+}
+.collection-form-block {
+    position: fixed;
+    width: 100%;
+    height: 90vh;
+}
+.user-home-page .collection-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10em auto;
+    background-color: white;
+    padding: 2em 3em;
+    width: 20em;
+    border-radius: 1em;
+}
+.collection-form input[type=text] {
+    width: 11em;
+    border: none;
+    border-radius: 1em;
+    font-size: 1em;
+    padding: .2em .4em;
+    background-color: rgb(216, 229, 255);
+
+}
+.collection-form input[type=submit] {
+    margin-top: .5em;
+}
+.user-home-page .grid {
+    background-color: beige;
+    width: 90%;
+    height: 70vh;
+}
