--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -54,18 +54,14 @@ nav .links a:hover {
 .sign-up-block .landing-sign-up {
     background-color: white;
     width: 30em;
-    margin: 5em;
+    margin: 5em auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: .5em;
+    border-radius: 1em;
 }
-.landing-sign-up {
-    padding: 3em 0;
-    position: fixed;
-    border-radius: 2em;
-    justify-content: center;
-    align-items: center;
-}
+
 .landing-sign-up div {
     margin-top: 1em;
 }
@@ -195,8 +191,6 @@ nav .links a:hover {
 
 
 /* Contact Us */
-.contact-us-page {
-}
 .contact-us-page h1 {
     text-align: center;
 }
@@ -243,25 +237,24 @@ nav .links a:hover {
     justify-content: center;
 }
 .user-home-page .user-nav {
-    background-color: rgb(193, 232, 255);
+    background-color: rgb(255, 198, 159);
     border-radius: .7em;
     padding: 1em;
     width: 60em;
     margin: .4em auto;
 }
 .user-home-page .grid-block {
-    border: 1px solid black;
     width: 62em;
     margin: 0 auto;
     display: flex;
 }
 .user-home-page .recent-bar {
     width: 8em;
-    min-height: 10em;
-    background-color: rgb(45, 45, 110);
+    min-height: 35em;
+    background-color: rgb(205, 211, 206);
     margin: 0 .2em;
     border-radius: .7em;
-    color: white;
+    color: rgb(45, 51, 25);
     padding-top: 1em;
     text-align: center;
 }
@@ -293,7 +286,22 @@ nav .links a:hover {
     margin-top: .5em;
 }
 .user-home-page .grid {
-    background-color: beige;
     width: 90%;
-    height: 70vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    height: 35em;
+    overflow: scroll;
+}
+
+.user-home-page .grid a {
+    background-color: rgb(239, 239, 255);
+    border: 1px solid rgb(206, 206, 206);
+    border-radius: .3em;
+    width: 8em;
+    height: 10em;
+    display: flex;
+    margin: .5em 1.5em;
+    inline-size: 150px;
+    overflow: hidden;
 }
