--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -19,6 +19,8 @@
                         <a href="/user/collection/<%- e._id %>">
                             <div class="collection-grid-item">
                                 <p> <%- e.name %> </p>
+                                <br>
+                                <p> <%- e.size %> Forms </p>
                             </div>
                         </a>
 
