--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -16,7 +16,7 @@
 
                     <% collections.forEach((e) => { %>
 
-                        <a href="/user/collection/<%- e._id %>">
+                        <a href="/form/collection/<%- e._id %>">
                             <div class="collection-grid-item">
                                 <p> <%- e.name %> </p>
                                 <br>
