--- a/src/views/form/collection.ejs
+++ b/src/views/form/collection.ejs
@@ -1,5 +1,14 @@
 <%- include('../partials/header.ejs') %>
 
-
+    <div class="collection-page">
+        <div class="content">
+            <div class="favorites-bar">
+                <h3>Favorites</h3>
+            </div>
+            <div class="forms-list">
+                
+            </div>
+        </div>
+    </div>
 
 <%- include('../partials/footer.ejs') %>
