Started re-design of CSS

--- a/src/views/form/collection.ejs
+++ b/src/views/form/collection.ejs
@@ -2,12 +2,19 @@
 
     <div class="collection-page">
         <div class="content">
-            <div class="favorites-bar">
-                <h3>Favorites</h3>
+            <div class="top-bar">
+                <button>+ New Form</button>
             </div>
             <div class="forms-list">
                 
             </div>
+        </div>
+        <div class="popup form-form">
+            <form action="/form/create" method="POST">
+
+                
+
+            </form>
         </div>
     </div>
 
