Working on design of the landing page

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,52 +2,20 @@
 
     <div class="landing-page">
 
-        <div class="content">
-            <div class="left-block">
-                <h1>
-                    Forms that help <br> you keep your
-                    work and life organized.
-                </h1>
-                <h2>
-                    Going from busy and stressed, to 
-                    organzied and relax. One entry at 
-                    a time.
-                </h2>
+        <div class="content-container con-1">
+
+            <div class="content-item item-1">
+                <h2>Start by making a free account today!</h2>
+                <button class="sign-up-button">
+                    Sign up
+                </button>
             </div>
-            <div class="right-block">
-            
-                <img src="/images/img1.jpg" alt="img1">
-                <!-- <a href="/user/sign-up" id="landing-sign-up-link"><div class="sign-up-link">Sign up today!</div></a> -->
-                <div class="sign-up-link" id="landing-sign-up-link" onclick="showPopUp()">Sign up today!</div>
-                
+            <div class="content-item item-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quos ea optio, distinctio ipsa sit nemo odit veritatis numquam maiores fugiat, voluptates, explicabo illum aliquid possimus praesentium facere. Sequi, perferendis?</p>
+
             </div>
-        </div>
-
-
-        <div class="popup sign-up-block" id="sign-up-block" onclick="showPopUp(event)">
-
-            <div class="landing-sign-up">
-                <h1>Sign up with Email</h1>
-                <form action="/user/create-user" method="POST">
-
-                    <div>
-                        <label for="name">Name</label><br>
-                        <input type="text" name="name" required>
-                    </div>
-                    <div>
-                        <label for="email">Email</label><br>
-                        <input type="email" name="email" required>
-                    </div>
-                    <div>
-                        <label for="password">Password</label><br>
-                        <input type="password" name="password" required>
-                    </div>
-
-                    <div class="landing-sign-up-button">
-                        <input type="submit" value="Create Account">
-                    </div>
-
-                </form>
+            <div class="content-item item-3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quos ea optio, distinctio ipsa sit nemo odit veritatis numquam maiores fugiat, voluptates, explicabo illum aliquid possimus praesentium facere. Sequi, perferendis?</p>
 
             </div>
 
