--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -6,7 +6,61 @@ body {
     padding: 0;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(246, 246, 246);
 }
 a {
     text-decoration: none;
+    color: black;
+}
+.content-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.content-item {
+    border-radius: .3em;
+    display: flex;
+    justify-content: center;
+}
+
+/* header.ejs */
+nav {
+    display: flex;
+    background-color: white;
+}
+nav .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60em;
+    max-width: 90%;
+    margin: 0 auto;
+    border-bottom: 1px solid gray;
+}
+nav .links {
+    margin-left: auto;
+}
+nav .links a {
+    margin-left: 2em;
+}
+nav .links a:hover {
+    border-bottom: 1px solid gray;
+}
+
+
+/* index.ejs */
+.content-item {
+    background-color: white;
+}
+.landing-page .content-item {
+    width: 20em;
+    height: 30em;
+    margin: 1em .6em;
+}
+.landing-page .item-1 {
+    box-sizing: border-box;
+    flex-direction: column;
+    text-align: center;
+    padding: 2em;
+    padding-bottom: 7em;
 }
