--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -9,7 +9,7 @@
     
     <nav onload="initializeNodes()">
         <div class="content">
-            <h1><a href="/">Datum</a></h1>
+            <h1><a href="/">Rho</a></h1>
             <div class="links">
 
                 <a href="/about">About</a>
