--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,7 +1,10 @@
-html, body {
+html {
     height: 100%;
 }
 body {
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -12,13 +15,41 @@ a {
     text-decoration: none;
     color: black;
 }
+button {
+    border: none;
+    border-radius: 5px;
+    padding: 10px 0;
+    color: white;
+}
+.page-container {
+    display: flex;
+    justify-content: center;
+}
+.popup {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100vh;
+    z-index: 10;
+}
+.popup-form {
+    background-color: rgb(255, 255, 255);
+    width: 300px;
+    margin: 8em auto;
+    display: flex;
+    flex-direction: column;
+    padding: 3em 5em;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
 .content-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 .content-item {
-    border-radius: .3em;
+    border-radius: 7px;
     display: flex;
     justify-content: center;
 }
@@ -53,14 +84,23 @@ nav .links a:hover {
     background-color: white;
 }
 .landing-page .content-item {
-    width: 20em;
-    height: 30em;
-    margin: 1em .6em;
+    width: 310px;
+    height: 470px;
+    box-sizing: border-box;
+    margin: 10px 10px;
 }
 .landing-page .item-1 {
-    box-sizing: border-box;
     flex-direction: column;
     text-align: center;
     padding: 2em;
-    padding-bottom: 7em;
+    padding-bottom: 6em;
+    text-align: left;
+    font-size: 1.5em;
+}
+.sign-up-button {
+    background-color: rgb(229, 89, 52);
+}
+.sign-up-button:hover {
+    background-color: rgb(247, 114, 77);
+
 }
