--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -43,6 +43,15 @@ button {
     align-items: center;
     border-radius: 10px;
 }
+.popup-form input {
+    width: 15em;
+    margin-top: 3px;
+    background-color: rgb(216, 216, 255);
+    border: none;
+}
+.form-input {
+    margin: 20px 0;
+}
 .content-container {
     display: flex;
     flex-wrap: wrap;
