--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -40,6 +40,8 @@
                     <input type="password" name="password" required>
                 </div>
 
+                <input type="submit" value="Create Account">
+
             </form>
         </div>
 
