--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body onload="initializeNodes()">
     
-    <nav onload="initializeNodes()">
+    <nav>
         <div class="content">
             <h1><a href="/">Rho</a></h1>
             <div class="links">
