--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,10 +12,11 @@
             </div>
             <div class="content-item item-2">
                 <h2>Forms to help keep your work and life organized</h2>
+                <img src="/images/img2.png" alt="img2">
             </div>
             <div class="content-item item-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum quos ea optio, distinctio ipsa sit nemo odit veritatis numquam maiores fugiat, voluptates, explicabo illum aliquid possimus praesentium facere. Sequi, perferendis?</p>
-
+                <h2>Keep track of records and export them to pdf documents</h2>
+                <img src="/images/icon-1.png" alt="icon-1">
             </div>
 
         </div>
@@ -25,7 +26,7 @@
 
         <div class="popup-form sign-up-form">
             <h2>Sign up with Email</h2>
-            <form action="/user/create" method="POST">
+            <form action="/user/create-user" method="POST">
 
                 <div class="form-input-container">
                     <label for="name">Name</label><br>
