--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -1,47 +1,49 @@
 <%- include('../partials/header.ejs') %>
 
-    <div class="user-home-page">
-        <div class="content">
-            <div class="user-nav">
-                <button onclick="showPopUp(event)">New Collection</button>
-            </div>
-            <div class="grid-block">
-                <div class="recent-bar">
-                    <span>Recent</span>
-                    <ul>
-
-                    </ul>
-                </div>
-                <div class="grid">
-
-                    <% collections.forEach((e) => { %>
-
-                        <a href="/form/collection/<%- e._id %>">
-                            <div class="collection-grid-item">
-                                <p> <%- e.name %> </p>
-                                <br>
-                                <p> <%- e.size %> Forms </p>
-                            </div>
-                        </a>
-
-                    <% }) %>
-
-                </div>
-            </div>
+    <div class="page-container home-page">
+        <div class="content-container con-1">
+            <h1>Hello <%- user.name %></h1>   
         </div>
-        <div class="popup collection-form-block" onclick="showPopUp(event)">
-            <div class="collection-form" id="collection-form">
-                <form action="/form/create-collection" method="POST">
-    
-                    <h3>Name your new collection</h3>
-                    <input type="text" name="name" required><br>
-    
-                    <input type="submit" value="Create">
-    
-    
-                </form>
+        <div class="content-container con-2">
+
+            <div class="collection-grid">
+                
+                <% if (collections.length == 0) { %>
+
+                    <div class="empty">
+
+                        <h3>Looks like you have no records!</h3>
+                        <div class="buttons">
+                            <button onclick="showPopUp(event)" class="item">+ Collection</button>
+                            <a href="/form/create-form-page" class="item">+Form</a>
+                        </div>
+                        
+
+                    </div>
+
+                <% } %>
+
             </div>
+            <div class="form-grid">
+
+            </div>
+
         </div>
     </div>
+    <div class="popup create-collection" onclick="showPopUp(event)">
+
+        <div class="popup-form sign-up-form">
+            <h2>Name your collection</h2>
+            <form action="/user/create-user" method="POST">
+
+                <div class="form-input-container">
+                    <input type="text" name="name" required>
+                </div>
+                
+
+                <input type="submit" class="popup-submit" value="Create">
+
+            </form>
+        </div>
 
 <%- include('../partials/footer.ejs') %>
