--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
 
             <div class="content-item item-1">
                 <h2>Start by making a free account today!</h2>
-                <button class="sign-up-button" onclick="showPopUp(event)">
+                <button class="popup-button sign-up" onclick="showPopUp(event)">
                     Sign up
                 </button>
             </div>
@@ -22,7 +22,7 @@
         </div>
 
     </div>
-    <div class="popup sign-up" onclick="showPopUp(event)">
+    <div class="popup sign-up" onclick="closePopUp(event)">
 
         <div class="popup-form sign-up-form">
             <h2>Sign up with Email</h2>
