--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -13,6 +13,7 @@
                     <div class="empty">
 
                         <h3>Looks like you have no records!</h3>
+                        <img src="/images/img3.jpg" alt="img3">
                         <div class="buttons">
                             <button onclick="showPopUp(event)" class="popup-button create-collection">+ Collection</button>
                             <button onclick="showPopUp(event)" class="popup-button create-form">+ Form</button>
