--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -63,6 +63,9 @@ button {
     margin-top: 15px;
     width: 70%;
 }
+.popup-form input[type=submit]:hover {
+    background-color: rgb(255, 154, 126);
+}
 .form-input-container {
     margin: 10px 0;
 }
@@ -157,7 +160,7 @@ nav .links a:hover {
 .home-page .con-1 .buttons button {
     background-color: rgb(219, 219, 255);
     padding: 9px 9px;
-    border-radius: 20px;
+    border-radius: 4px;
 }
 .home-page .con-2 {
     background-color: white;
@@ -182,7 +185,9 @@ nav .links a:hover {
     align-items: center;
 }
 .popup-form.create-form-form {
-    height: 40vh;
+    height: 350px;
+    justify-content: left;
+    display: block;
 }
 .home-page img {
     width: 300px;
@@ -192,15 +197,16 @@ nav .links a:hover {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 50%;
+    height: fit-content;
     border: 1px solid blue;
+    overflow: scroll;
 }
 .home-page .collections a {
     background-color: rgb(228, 228, 228);
     margin: 5px;
-    width: 130px;
-    height: 150px;
-    border-radius: 7px;
+    width: 120px;
+    height: 100px;
+    border-radius: 4px;
 }
 .home-page p {
     margin-right: auto;
@@ -212,3 +218,24 @@ nav .links a:hover {
     border: 1px solid black;
     margin-bottom: auto;
 }
+#field-inputs {
+    border: 1px solid black;
+    height: 100px;
+    max-height: 120px;
+    overflow: scroll;
+    margin: 10px 7px;
+    border: 1px solid rgb(179, 179, 179);
+    border-radius: 6px;
+    padding: 10px;
+}
+#field-inputs input[type=text] {
+    margin-top: 8px;
+}
+.create-form-form form {
+    box-sizing: border-box;
+    padding: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
