Improved the process of creating a new form

--- a/src/views/user/home.ejs
+++ b/src/views/user/home.ejs
@@ -34,7 +34,7 @@
 
                             <li>
                                 <div>
-                                    <p><%- form.name %></p>
+                                    <%- form.name %>
                                 </div>
                             </li>
 
@@ -65,7 +65,7 @@
     
                             <a href="/form/collection/<%- collection._id %>">
                                 <div class="item">
-                                    <h3><%- collection.name %></h3>
+                                    <h4><%- collection.name %></h4>
                                 </div>
                             </a>
     
