--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: rgb(246, 246, 246);
 }
 a {
@@ -164,7 +164,7 @@ nav .links a:hover {
 }
 .home-page .con-2 {
     background-color: white;
-    height: 780px;
+    height: fit-content;
 }
 .home-page .con-2 .empty {
     margin-top: 100px;
@@ -198,15 +198,22 @@ nav .links a:hover {
     flex-wrap: wrap;
     width: 100%;
     height: fit-content;
-    border: 1px solid blue;
+    max-height: 250px;
     overflow: scroll;
+    padding-bottom: 100px;
 }
 .home-page .collections a {
     background-color: rgb(228, 228, 228);
     margin: 5px;
     width: 120px;
     height: 100px;
-    border-radius: 4px;
+    border-radius: 2px;
+}
+.home-page .collections .item {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: 1px solid red;
 }
 .home-page p {
     margin-right: auto;
@@ -215,8 +222,8 @@ nav .links a:hover {
 .home-page .forms {
     width: 100%;
     height: 290px;
-    border: 1px solid black;
     margin-bottom: auto;
+    overflow: scroll;
 }
 #field-inputs {
     border: 1px solid black;
@@ -238,4 +245,10 @@ nav .links a:hover {
     flex-direction: column;
     justify-content: left;
 }
-
+.home-page .con-2 p {
+    height: fit-content;
+    margin-bottom: 0;
+}
+.home-page .con-2 .forms {
+    margin-top: 0;
+}
